--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -218,3 +218,19 @@ address { font-style: normal; }
 
 .tm-bgcolor-3 { background-color: #99CCCC; }
 .tm-border-rounded { border-radius: 15px; }
+
+.floating { 
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 30px;
+    width: 400px;
+    height: auto;;
+}
+ 
+@keyframes floating {
+    0% { transform: translate(0,  0px); }
+    50%  { transform: translate(0, 15px); }
+    100%   { transform: translate(0, -0px); }   
+}
