--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -212,7 +212,7 @@ address { font-style: normal; }
 .tm-mb-50 { margin-bottom: 50px; }
 .tm-mb-80 { margin-bottom: 80px; }
 .tm-bgcolor-1 { background-color: #faf61b; }
-.tm-bgcolor-2 { background-color: #e82020; }
+.tm-bgcolor-2 { background-color: #1C4086; }
 .tm-bgcolor-3 { background-color: black; }
 .tm-border-rounded { border-radius: 15px; }
 
